--- a/template/package.json
+++ b/template/package.json
@@ -5,32 +5,38 @@
   "author": "<%- author %>",
   "scripts": {
     "start": "node development.js",
-    "compile": "npm run lint && tsc",
-    "lint": "tslint \"src/**/*.ts\""
+    "compile": "npm run format && npm run lint && tsc",
+    "lint": "tslint \"src/**/*.ts\"",
+    "vercel-build": "npm run compile",
+    "build": "node build.mjs",
+    "format": "prettier --write src/"
   },
   "dependencies": {
-    "think-cache": "^1.1.1",
-    "think-cache-file": "^1.1.1",
-    "think-session": "^1.1.5",
-    "think-session-file": "^1.1.2",
-    "think-view": "^1.0.12",
-    "think-view-nunjucks": "^1.0.10",
-    "thinkjs": "^3.2.11",
+    "think-logger3": "^1.4.0",
+    "think-cache": "^1.1.2",
+    "think-cache-file": "^1.1.2",
+    "think-session": "^1.1.6",
+    "think-session-file": "^1.1.4",
+    "think-view": "^1.0.13",
+    "think-view-nunjucks": "^1.0.11",
+    "thinkjs": "^3.2.15",
     "thinkjs3-ts": "^1.0.1"
   },
   "devDependencies": {
-    "typescript": "^2.5.3",
+    "typescript": "^4.9.5",
+    "@types/node": "*",
     "@types/koa": "*",
-    "node-notifier": "^5.0.2",
-    "think-watcher": "^3.0.0",
+    "node-notifier": "^10.0.1",
+    "prettier": "^3.0.1",
+    "think-watcher": "^3.0.4",
     "think-inspect": "0.0.2",
-    "think-typescript": "^1.0.4",
-    "tslint": "^5.8.0"
+    "think-typescript": "^2.0.0",
+    "tslint": "^5.20.1"
   },
   "repository": "",
   "license": "MIT",
   "engines": {
-    "node": ">=6.0.0"
+    "node": ">=10"
   },
   "readmeFilename": "README.md"
 }
