--- a/template/package.json
+++ b/template/package.json
@@ -33,6 +33,13 @@
     "think-typescript": "^2.0.0",
     "tslint": "^5.20.1"
   },
+  "resolutions": {
+    "think-helper": "^1.1.4",
+    "formidable":"^2.1.2",
+    "ms":"^2.0.0",
+    "xml2js":"^0.5.0",
+    "validator":"^13.7.0"
+  },
   "repository": "",
   "license": "MIT",
   "engines": {
