--- a/template/package.json
+++ b/template/package.json
@@ -38,7 +38,9 @@
     "formidable":"^2.1.2",
     "ms":"^2.0.0",
     "xml2js":"^0.5.0",
-    "validator":"^13.7.0"
+    "validator":"^13.7.0",
+    "think-payload": "file:pack/think-payload-1.4.0.tgz",
+    "think-validator": "file:pack/think-validator-1.6.7.tgz"
   },
   "repository": "",
   "license": "MIT",
