--- a/template/package.json
+++ b/template/package.json
@@ -26,6 +26,7 @@
     "typescript": "^4.9.5",
     "@types/node": "*",
     "@types/koa": "*",
+    "@types/validator": "^13.11.7",
     "node-notifier": "^10.0.1",
     "prettier": "^3.0.1",
     "think-watcher": "^3.0.4",
@@ -42,10 +43,20 @@
     "think-payload": "file:pack/think-payload-1.4.0.tgz",
     "think-validator": "file:pack/think-validator-1.6.7.tgz"
   },
+  "overrides": {
+    "think-helper": "^1.1.4",
+    "formidable":"^2.1.2",
+    "ms":"^2.0.0",
+    "xml2js":"^0.5.0",
+    "validator":"^13.7.0",
+    "think-payload": "file:pack/think-payload-1.4.0.tgz",
+    "think-validator": "file:pack/think-validator-1.6.7.tgz"
+  },
   "repository": "",
   "license": "MIT",
   "engines": {
-    "node": ">=10"
+    "node": ">=10",
+    "npm":">= 8"
   },
   "readmeFilename": "README.md"
 }
