--- a/template/package.json
+++ b/template/package.json
@@ -26,7 +26,6 @@
     "typescript": "^4.9.5",
     "@types/node": "*",
     "@types/koa": "*",
-    "@types/validator": "^13.11.7",
     "node-notifier": "^10.0.1",
     "prettier": "^3.0.1",
     "think-watcher": "^3.0.4",
@@ -39,7 +38,7 @@
     "formidable":"^2.1.2",
     "ms":"^2.0.0",
     "xml2js":"^0.5.0",
-    "validator":"^13.7.0",
+    "validator": "file:pack/validator-13.11.0.tgz",
     "think-payload": "file:pack/think-payload-1.4.0.tgz",
     "think-validator": "file:pack/think-validator-1.6.7.tgz"
   },
@@ -48,7 +47,7 @@
     "formidable":"^2.1.2",
     "ms":"^2.0.0",
     "xml2js":"^0.5.0",
-    "validator":"^13.7.0",
+    "validator": "file:pack/validator-13.11.0.tgz",
     "think-payload": "file:pack/think-payload-1.4.0.tgz",
     "think-validator": "file:pack/think-validator-1.6.7.tgz"
   },
